; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dsl_scan.c_dsl_scan_need_resilver.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_dsl_scan.c_dsl_scan_need_resilver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@vdev_indirect_ops = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@DTL_PARTIAL = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64, i32)* @dsl_scan_need_resilver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsl_scan_need_resilver(i32* %0, i32* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @DVA_GET_VDEV(i32* %12)
  %14 = call %struct.TYPE_5__* @vdev_lookup_top(i32* %11, i32 %13)
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %10, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, @vdev_indirect_ops
  br i1 %18, label %19, label %21

19:                                               ; preds = %4
  %20 = load i32, i32* @B_TRUE, align 4
  store i32 %20, i32* %5, align 4
  br label %46

21:                                               ; preds = %4
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @DVA_GET_GANG(i32* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @B_TRUE, align 4
  store i32 %26, i32* %5, align 4
  br label %46

27:                                               ; preds = %21
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %29 = load i32, i32* @DTL_PARTIAL, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @vdev_dtl_contains(%struct.TYPE_5__* %28, i32 %29, i32 %30, i32 1)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %27
  %34 = load i32, i32* @B_FALSE, align 4
  store i32 %34, i32* %5, align 4
  br label %46

35:                                               ; preds = %27
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @DVA_GET_OFFSET(i32* %37)
  %39 = load i64, i64* %8, align 8
  %40 = call i32 @vdev_dtl_need_resilver(%struct.TYPE_5__* %36, i32 %38, i64 %39)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %44, label %42

42:                                               ; preds = %35
  %43 = load i32, i32* @B_FALSE, align 4
  store i32 %43, i32* %5, align 4
  br label %46

44:                                               ; preds = %35
  %45 = load i32, i32* @B_TRUE, align 4
  store i32 %45, i32* %5, align 4
  br label %46

46:                                               ; preds = %44, %42, %33, %25, %19
  %47 = load i32, i32* %5, align 4
  ret i32 %47
}

declare dso_local %struct.TYPE_5__* @vdev_lookup_top(i32*, i32) #1

declare dso_local i32 @DVA_GET_VDEV(i32*) #1

declare dso_local i64 @DVA_GET_GANG(i32*) #1

declare dso_local i32 @vdev_dtl_contains(%struct.TYPE_5__*, i32, i32, i32) #1

declare dso_local i32 @vdev_dtl_need_resilver(%struct.TYPE_5__*, i32, i64) #1

declare dso_local i32 @DVA_GET_OFFSET(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
